@@ -20,8 +20,8 @@ import java.io.IOException;
 import java.lang.reflect.Modifier;
 import java.time.Duration;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.Base64;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 import com.github.tomakehurst.wiremock.WireMockServer;
@@ -104,7 +104,7 @@ class KubernetesClientEventBasedSecretsChangeDetectorTests {
 				.putStringDataItem("password", Base64.getEncoder().encodeToString("p455w0rd2".getBytes()))
 				.putStringDataItem("username", Base64.getEncoder().encodeToString("user".getBytes()));
 		V1SecretList secretList = new V1SecretList().kind("SecretList").metadata(new V1ListMeta().resourceVersion("0"))
-				.items(Arrays.asList(dbPassword));
+				.items(List.of(dbPassword));
 
 		stubFor(get(urlMatching("^/api/v1/namespaces/default/secrets.*")).inScenario("watch")
 				.whenScenarioStateIs(STARTED).withQueryParam("watch", equalTo("false"))
@@ -163,13 +163,12 @@ class KubernetesClientEventBasedSecretsChangeDetectorTests {
 		controllerThread.start();
 
 		await().timeout(Duration.ofSeconds(10)).pollInterval(Duration.ofSeconds(2)).until(() -> howMany[0] >= 4);
-
 	}
 
 	// This is needed when using JDK17 because GSON uses reflection to construct an
 	// OffsetDateTime but that constructor
 	// is protected.
-	public static class GsonOffsetDateTimeAdapter extends TypeAdapter<OffsetDateTime> {
+	public final static class GsonOffsetDateTimeAdapter extends TypeAdapter<OffsetDateTime> {
 
 		@Override
 		public void write(JsonWriter jsonWriter, OffsetDateTime localDateTime) throws IOException {
